--- a/index.qmd
+++ b/index.qmd
@@ -9,4 +9,4 @@ Hi there 👋 I'm Yushu Zou
 
 👀 I'm interested in Biostatistics and Applied Statistics.
 
-🌱 I'm currently working as a Research Analyst at Public Health Ontario and as a Research Assistant at the University of Toronto's Medical Department.
+I'm currently working as a Research Coordinator at Public Health Ontario and as a Research Assistant at the University of Toronto's Medical Department.
